Working on Safari/phones

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@ body {
   font-family: "Comic Sans MS";
 }
 
+@media only screen and (max-width: 600px) {
+  img {
+    max-width: 60%;
+  }
+}
+
 #playerOne, #playerTwo {
   display: block;
 }
